applying background color to body and removing height from app html to fix odd scrollbar behavior

--- a/client/src/components/main/App/App.scss
+++ b/client/src/components/main/App/App.scss
@@ -1,8 +1,6 @@
 %app {
-  min-height: 100vh;
   display: flex;
   margin: 0 auto;
-  overflow: scroll;
 }
 
 .app-main {
